# Computer-Vision-HW2-OpenCV

./: .gitignore  CMakeLists.txt  CV_HW2.pptx  README.md
project_hw2/: func.cpp  main.cpp
project_hw2/include/: func.h
